        updated to provide interfaces for interacting with these data items, and
        all supported operations (merge/repair/extract/...) has been updated to
        handle such entries appropriately. For a more complete introduction of
        the new feature, please refer to the documentation at the
        https://mctools.github.io/mcpl/format_statsum/ page.
      * Add new mcpl_set_print_handler function in the C API which can be used
        to handle printouts from the MCPL library in a different manner than
        simply putting them onto stdout via a call to printf. One use-case for
        this would be for Python code using the MCPL C library (perhaps via the
        ctypes module), which can now use the new feature to redirect all
        printouts from the C library into the Python stdout streams.
      * Add support for compiled C code in python tests, allowing C code in
        tests/modules/lib_xxx/*.c to be accessed in Python test scripts in
        tests/scripts.
      * ...

v2.0.0 2024-04-24
      * After more than 200 commits affecting almost 300 files, this milestone
        release brings new supported user platforms, new packaging and
        deployment, and a huge restructuring of the environment in which MCPL is
        developed and tested.
      * One highly visible feature is that MCPL wheels on PyPI now provide
        full-fledged installations with all features previously only available
        via Conda or custom builds. Thus, `pip install mcpl` is now an
        alternative to `conda install -c conda-forge mcpl` for getting all the
        features.
      * Another, and perhaps the biggest, user-visible feature is that MCPL now
        also supports usage on Windows! This support is NOT considered
        experimental, and Windows users can now install the `mcpl` package via
        tools like `pip` and `conda` and expect the same features on both the